18931
```scala
import scala.reflect.macros.blackbox.Context
import scala.language.experimental.macros

object Macros {
  def impl(c: Context) = {
    import c.universe._
    println("OMG!!!")
    c.Expr[Unit](Literal(Constant(())))
  }

  def foo[T <: String]: Any = macro impl
}

object Test extends App {
  Macros.foo[Int]
}
```
```scala
7:02 ~/Projects/Master/sandbox (master)$ ss
Test.scala:2: error: type arguments [Int] do not conform to macro method foo's type parameter bounds [T <: String]
  Macros.foo[Int]
            ^
OMG!!!
one error found
```
